# ecs-manage

./: .travis.yml  Cargo.toml  Dockerfile  Jenkinsfile  appveyor.yml
.github/workflows/: ci.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: args.rs  helpers.rs  main.rs  services.rs
