[package]
name = "ecs-manage"
version = "0.1.0"
authors = ["Jonathan Morley <jmorley@cvent.com>"]

[dependencies]
structopt = "0.2.10"
rusoto_core = "0.32.0"
rusoto_ecr = "0.32.0"
rusoto_ecs = "0.32.0"
rusoto_elbv2 = "0.32.0"
failure = "0.1.1"
tokio-core = "0.1"
backoff = "0.1.2"
log = "0.4"
stderrlog = "0.4"
maplit = "1.0.1"
itertools = "0.7.8"
serde = "1"
serde_json = "1"
clap = "2"
